migrator-tests/tests/snapshots/embedded__embedded-4.snap
---
source: migrator-tests/tests/embedded.rs
expression: "migs[0].down.content"
---
REMOVE TABLE animal;
REMOVE TABLE animal_snake_case;
REMOVE TABLE crop;
REMOVE TABLE eats;
REMOVE TABLE eats_snake_case;
REMOVE TABLE migration;
REMOVE TABLE planet;
REMOVE TABLE student;

