migrator-tests/tests/snapshots/embedded__migrations-2.snap
---
source: examples/migration-cli/tests/embedded.rs
expression: db_info().await.unwrap()
---
DbInfo {
    analyzers: Analyzers(
        Info(
            {},
        ),
    ),
    functions: Functions(
        Info(
            {},
        ),
    ),
    params: Params(
        Info(
            {},
        ),
    ),
    scopes: Scopes(
        Info(
            {},
        ),
    ),
    tables: Tables(
        Info(
            {
                "animal": DefineStatementRaw(
                    "DEFINE TABLE animal SCHEMAFULL",
                ),
                "crop": DefineStatementRaw(
                    "DEFINE TABLE crop SCHEMAFULL",
                ),
                "eats": DefineStatementRaw(
                    "DEFINE TABLE eats SCHEMAFULL",
                ),
                "migration": DefineStatementRaw(
                    "DEFINE TABLE migration SCHEMAFULL",
                ),
                "planet": DefineStatementRaw(
                    "DEFINE TABLE planet SCHEMAFULL",
                ),
                "student": DefineStatementRaw(
                    "DEFINE TABLE student SCHEMAFULL",
                ),
            },
        ),
    ),
    tokens: Tokens(
        Info(
            {},
        ),
    ),
    users: Users(
        Info(
            {},
        ),
    ),
}
