migrator-tests/tests/snapshots/embedded__migrations-8.snap
---
source: examples/migration-cli/tests/embedded.rs
expression: fields_info.unwrap()
---
{
    "events": {},
    "fields": {
        "createdAt": "DEFINE FIELD createdAt ON eats TYPE datetime",
        "id": "DEFINE FIELD id ON eats TYPE record<eats>",
        "in": "DEFINE FIELD in ON eats TYPE record",
        "out": "DEFINE FIELD out ON eats TYPE record",
        "place": "DEFINE FIELD place ON eats TYPE string",
    },
    "indexes": {},
    "lives": {},
    "tables": {},
}
